--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Startup</title>
+    <title>Mus-Baillier</title>
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="col-lg-12 my-auto">
             <h1 class="text-uppercase faded">
-              <strong>Het grootste evenement van het jaar!</strong>
+              <strong>Vakantie in Frankrijk of Friesland</strong>
             </h1>
             <hr>
           </div>
